Tutorial part one complete.  App runs and counts down to hard-coded sabbatical on watch only.

--- a/SabbaticalCountdown WatchKit App/Base.lproj/Interface.storyboard
+++ b/SabbaticalCountdown WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="13E28" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9019"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="SabbaticalCountdown_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <label alignment="center" text="My Sabbatical" id="I3P-dW-qEw"/>
+                        <separator alignment="left" id="5f2-6z-WaO"/>
+                        <group width="1" alignment="left" id="uyw-Df-PEI"/>
+                        <label width="1" alignment="left" text="Label" id="yAB-bV-9ve"/>
+                        <label width="1" alignment="left" text="Label" id="Z6D-7B-xsj"/>
+                        <label width="1" alignment="left" text="Label" id="dLO-HU-8Jx"/>
+                    </items>
+                    <connections>
+                        <outlet property="daysLabel" destination="dLO-HU-8Jx" id="5zF-0G-YRr"/>
+                        <outlet property="monthsLabel" destination="Z6D-7B-xsj" id="Y9G-OO-txz"/>
+                        <outlet property="yearsLabel" destination="yAB-bV-9ve" id="Aie-Vk-r6y"/>
+                    </connections>
+                </controller>
             </objects>
         </scene>
     </scenes>
